# rpg-live-translator

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BRIEFING.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.agents/: architecture-guardian.md
app/: bootstrap.py  main.py
application/: capture_loop_service.py  profile_settings_service.py  translation_pipeline_service.py
config/: settings.py
docs/: BRIEFING.md  README.md  rpg-maker-mvmz.md
docs/auditorias/: README.md  auditoria-codigo-2026-06-10-otimizacao-bugs.md  auditoria-documentacao-2026-06-15.md
docs/next-steps/: mvmz-checklist.md  tasks-v1.md  tasks-v2.md
docs/relatorios/: README.md  relatorio-v01-fundacao-mvp.md  relatorio-v02-calibracao-pacote.md  relatorio-v03-confiabilidade-calibracao.md  relatorio-v04-coordenadas-e-consistencia.md  relatorio-v05-fechamento-mvp-captura.md  relatorio-v06-modo-rpg-maker-mvmz-inicial.md  relatorio-v07-cache-diagnosticos-mvmz.md  relatorio-v08-lote-mvmz.md  relatorio-v09-manutencao-catalogo-mvmz.md  relatorio-v10-ux-modos.md  relatorio-v11-patch-json-mvmz-inicial.md  relatorio-v12-database-batalha-cache-mvmz.md  relatorio-v13-qualidade-lote-patch-mvmz.md  relatorio-v15-quebra-linha-patch-mvmz.md
docs/report/: auditoria-2026-06-10.md  report-v1.md  report-v10.md  report-v11.md  report-v12.md  report-v13.md  report-v14.md  report-v15.md  report-v2.md  report-v3.md  report-v4.md  report-v5.md  report-v6.md  report-v7.md  report-v8.md  (+1 more)
domain/: errors.py  interfaces.py
scripts/: capture_region.py  create_profile.py
ui/: __init__.py  main_window.py  overlay_window.py
(+99 files in other folders)
